Fixed error found in beta test

--- a/index.html
+++ b/index.html
@@ -199,10 +199,8 @@
 					</div>
 					<div class="panel panel-default" id="layer-control-panel" style="margin:0">
 						<div class="panel-heading" role="tab" id="headingOne1">
-							<a class="panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">Layer Control
+							<a id="layer-control-panel-inner" class="panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1" aria-expanded="true" aria-controls="collapseOne1">Layer Control
 							</a>
-
-
 						</div>
 
 
