Beta errors part 2

--- a/index.html
+++ b/index.html
@@ -321,21 +321,21 @@
 						</div>
 
 						<div id="metadata" class="tab-pane fade">
-							<h4>DATA SOURCE</h4>
+							<h4>Data source</h4>
 							<div class="panel" id="boroughs-tab">
 								<p>All layers in CURIO map gallery are using public data source. Most data are published by City of Columbus, Mid-Ohio
 									Regional Planning Commission (MORPC) and Center for Urban and Regional Analysis (CURA).
 								</p>
 							</div>
 
-							<h4>LAYER CATEGORIZATION</h4>
+							<h4>Layer categorization</h4>
 							<div class="panel" id="boroughs-tab">
 								<p>Based on layers' nature, all layers are divided into Transportation (with orange edge), Environment (with green edge)
 									and Social (with blue edge).</br>
 								</p>
 							</div>
 
-							<h4>COMPATIBILITY</h4>
+							<h4>Compatibility</h4>
 							<div class="panel" id="boroughs-tab">
 								<p>CURIO map gallery support most mainstream browsers (Chrome, Firefox, safari, etc.) on Windows, MacOS and Android
 									pad.
@@ -343,12 +343,12 @@
 							</div>
 
 							</p>
-							<h4>BASEMAPS</h4>
+							<h4>Basemaps</h4>
 							<div class="panel" id="boroughs-tab">
 								<p>Basemaps are provided by
 									<a href="http://www.arcgis.com/home/group.html?owner=esri&title=arcgis%20online%20basemaps" target="_blank">Esri</a> and hosted on ArcGIS online. Basemaps can be integrated into webmaps for free.</p>
 							</div>
-							<h4>MAP TEMPLATE</h4>
+							<h4>Map template</h4>
 							<div class="panel" id="boroughs-tab">
 								<p>This map layout is adapted by
 									<a href="https://github.com/luyuliu" target="_blank">Luyu Liu</a> based on a
@@ -410,27 +410,6 @@
 		<!-- /.modal-dialog -->
 	</div>
 	<!-- /.modal -->
-	<!-- /.modal -->
-
-	<div class="modal fade" id="rickroll-modal" tabindex="-1" role="dialog">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button class="close" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title">
-						Developed by
-						<a href='https://github.com/luyuliu'>Luyu Liu</a>
-					</h4>
-					<div id="rickroll-box"></div>
-				</div>
-				<div class="modal-body">
-					<div id="attribution"></div>
-				</div>
-			</div>
-			<!-- /.modal-content -->
-		</div>
-		<!-- /.modal-dialog -->
-	</div>
 	<!-- /.modal -->
 
 	<div class="modal fade" id="more-modal" tabindex="-1" role="dialog">
