--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		<div class="container-fluid">
 
 			<div class="navbar-header" id="mapheader">
-				<a class="navbar-brand mapheader tutmainpg" id="about-btn" title="Metadata of the map gallery" href="#" style="z-index:99999999999">CURIO@OSU Comprehensive Map Gallery</a>
+				<a class="navbar-brand mapheader tutmainpg" id="about-btn" title="Metadata of the map gallery" href="#" style="z-index:99999999999">CURIO@OSU Integrated Map Gallery</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right" style="margin-top:8;">
@@ -284,7 +284,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<button class="close" type="button" data-dismiss="modal" aria-hidden="true">&times;</button>
-					<h4 class="modal-title">About Comprehensive Map Gallery</h4>
+					<h4 class="modal-title">About Integrated Map Gallery</h4>
 				</div>
 				<div class="modal-body">
 					<ul class="nav nav-tabs nav-justified" id="aboutTabs">
@@ -314,7 +314,7 @@
 
 								<div id="meta-first-page" class="panel-body" style="width: 100%">
 									<h4>Project introduction</h4>
-									This map gallery is fantastic.
+									This map gallery allows integrated mapping of static geographic data for Columbus.  You can select any or all of the thematic layers to add to the map.  You can also control the opacity of each layer, and its order in the combined map.  You can also identify and see more information about specific Points of Interests (POIs) for some map layers.</br>Be sure to see the tutorial for more complete instructions!  
 								</div>
 
 							</div>
@@ -337,8 +337,7 @@
 
 							<h4>Compatibility</h4>
 							<div class="panel" id="boroughs-tab">
-								<p>CURIO map gallery support most mainstream browsers (Chrome, Firefox, safari, etc.) on Windows, MacOS and Android
-									pad.
+								<p>CURIO map gallery support most mainstream browsers (Chrome, Firefox, safari, etc.) for widescreen OS such as Windows, MacOS and Android.
 								</p>
 							</div>
 
