--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@
 													<a href="#" id="morelayer-btn">
 														<i class="fa fa-folder-open" aria-hidden="true"></i> Add more layers</a>
 												</li>
+												<li>
+													<a href="#" id="tutorial-btn2">
+														&nbsp<i class="fa fa-info" aria-hidden="true"></i> &nbsp     Go to tutorial</a>
+												</li>
 
 											</ul>
 										</div>
@@ -259,7 +263,7 @@
 			</div>
 		</div>
 
-		<div class="mini-submenu" title="Expand the map control">
+		<div class="mini-submenu" id="mini" title="Expand the map control">
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
@@ -314,7 +318,8 @@
 
 								<div id="meta-first-page" class="panel-body" style="width: 100%">
 									<h4>Project introduction</h4>
-									This map gallery is fantastic.
+									This map gallery allows integrated mapping of static geographic data for Columbus. You can select any or all of the thematic layers to add to the map. You can also control the opacity of each layer, and its order in the combined map. You can also identify and see more information about specific Points of Interests (POIs) for some map layers.
+								</br>Be sure to see the tutorial for more complete instructions!
 								</div>
 
 							</div>
