--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
 							<h4>Compatibility</h4>
 							<div class="panel" id="boroughs-tab">
-								<p>CURIO map gallery support most mainstream browsers (Chrome, Firefox, safari, etc.) for widescreen OS such as Windows, MacOS and Android.
+								<p>CURIO map gallery supports most mainstream browsers (Chrome, Firefox, safari, etc.) for widescreen OS such as Windows, MacOS and Android.
 								</p>
 							</div>
 
